--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         <div class="hero_panel_color_dos position-absolute h-100 "></div>
         <div class="container d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Lead the pack! <br> Run Run!
+                ABOUT
             </h1>
             <button class="hero_top_boton">
                 Get Started
@@ -115,13 +115,12 @@
         </ul>
     </section>
     <main class="main">
-        <section class="about d-flex flex-column w-100 ">
-            <div class="about_contenido_contenedor w-100">
+        <section class="about container ">
+            <div class="about_contenido_contenedor row">
                 <div class="about_informacion container">
-                    <article >
-                        <h6>W</h6> 
-                        <p>
-                            e are a leading company in the sports implements 
+                    <article class="row">
+                        <p class="col-12">
+                            We are a leading company in the sports implements 
                             and articles market that seeks to position itself 
                             in the American Continent, providing high-quality 
                             products for the practice of sports, both 
@@ -132,9 +131,8 @@
                             mental and physical health of our public.
                         </p>
                     </article>
-                    <article>
-                        <h6>W</h6> 
-                        <p>
+                    <article class="row">
+                        <p class="col-12">
                             We provide solutions in the field of sports at a 
                             national and international level through innovation,
                             service and quality of the products we offer, our 
@@ -144,28 +142,28 @@
                             audience.
                         </p>
                     </article>
-                    <div class="d-flex justify-content-center align-items-center">
+                    <div class="row d-flex justify-content-center align-items-center">
                         <button class="about_boton mt-4">
                             Read  More
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="about_caracteristicas py-2 container my-4 d-flex flex-row  justify-content-center align-items-center">
-                <ul class="container d-flex flex-row flex-wrap justify-content-center align-items-center  mb-0">
-                    <li class="d-flex flex-row justify-content-center align-items-center mx-2">
+            <div class="about_caracteristicas py-2 container mt-3 mb-5">
+                <ul class="row mb-0">
+                    <li class="col-12 col-md-4 d-flex flex-column align-items-center  list-unstyled">
                         <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                             <img src="PRUEBA/IMAGENES/icon--.png" alt="">
                         </div>
                         <p>Support</p>
                     </li>
-                    <li class="d-flex flex-row  justify-content-center align-items-center mx-2">
+                    <li class="col-12  col-md-4 d-flex flex-column align-items-center list-unstyled">
                         <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                             <img src="PRUEBA/IMAGENES/icon-2-2.png" alt="">
                         </div>
                         <p>Good Lead</p>
                     </li>
-                    <li class="d-flex flex-row   justify-content-center align-items-center mx-2">
+                    <li class="col-12  col-md-4 d-flex flex-column align-items-center align-items-center list-unstyled">
                         <div class="d-flex flex-row justify-content-center align-items-center mx-2">
                             <img src="PRUEBA/IMAGENES/icon-3-2.png" alt="">
                         </div>
@@ -174,99 +172,106 @@
                 </ul>
             </div>
         </section>
-        <section class="Subscribe_to_Newsletter Newsletter_about py-3 d-flex flex-column justify-content-center align-items-center mt-4">
-            <div class="container">
-                <h2 class="text-center">Subscribe to Newsletter</h2>
-                <form class=" d-flex flex-row flex-wrap justify-content-center align-content-center ">
-                    <input type="text" placeholder="" class="">
-                    <div class="d-flex flex-row justify-content-center align-items-center">
-                        <button class="mx-2 text-center ">Subscribe</button>
-                    </div>
-                </form>
-            </div>
+        <section class="Subscribe_to_Newsletter container-fluid d-flex flex-column justify-content-center align-items-center my-3  ">
+            <h2>Subscribe to Newsletter</h2>
+            <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
+                <input type="text" placeholder="" class="mx-1">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <button class="mx-2 text-center ">Subscribe</button>
+                </div>
+            </form>
         </section>
     </main>
-    <footer class="container-fluid d-flex flex-column ">
-        <div class="row footer_info">
-            <div class=" col-4 my-3 d-flex flex-column justify-content-center align-items-center ">
-                <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
-                    <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
-                </a>
-                <ul class=" d-flex flex-row list-unstyled m-0">
-                    <li class="mx-2">
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-facebook"></i>
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-instagram"></i>
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-linkedin"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-4 my-3 ">
-                <h6>Quick Links</h6>
-                <ul>
-                    <li >
-                        <span class="punto"></span>
-                        <a aria-current="page" href="about.html">About us</a>
-                    </li>
-                    <li >
-                        <span class="punto "></span>
-                        <a  href="shop.html">Shop By</a>
-                    </li>
-                    <li class=>
-                        <span class="punto"></span>
-                        <a  href="preguntasF.html">Faq’s </a>
-                    </li>
-                    <li >
-                        <span class="punto"></span>
-                        <a  href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-4 my-3 ">
-                <h6>More Information</h6>
-                <ul>
-                    <li class="list-unstyled d-flex flex-row">
-                        <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-geo-alt-fill mx-2"></i>
-                            <p>
-                                5191 Eastside Hwy
-                                Stevensville, MT 59870
-                            </p>
-                        </a>
-                    </li>
-                    <li class="list-unstyled d-flex flex-row">
-                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-envelope-fill mx-2"></i>
-                            <p>info@glamping.global</p>
-                        </a>
-                    </li>
-                    <li class="list-unstyled d-flex flex-row2">
-                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-telephone-fill mx-2"></i>
-                            <p>Tel: 1-844-WEGLAMP</p>
-                        </a> 
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-            <div class="container d-flex justify-content-between align-items-center">
-                <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-                <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
-                    <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
-                </a>
+<!-- FOOTER -->
+<footer class="">
+    <div class=" footer_info">
+        <div class="container">
+            <div class="row">
+                <div class=" col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center ">
+                    <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
+                        <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                    </a>
+                    <ul class=" d-flex flex-row list-unstyled m-0">
+                        <li class="mx-2">
+                            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="mx-2">
+                            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="mx-2">
+                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center">
+                    <h6>Quick Links</h6>
+                    <ul>
+                        <li >
+                            <span class="punto"></span>
+                            <a aria-current="page" href="about.html">About us</a>
+                        </li>
+                        <li >
+                            <span class="punto "></span>
+                            <a  href="shop.html">Shop By</a>
+                        </li>
+                        <li class=>
+                            <span class="punto"></span>
+                            <a  href="preguntasF.html">Faq’s </a>
+                        </li>
+                        <li >
+                            <span class="punto"></span>
+                            <a  href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center">
+                    <h6>More Information</h6>
+                    <ul>
+                        <li class="list-unstyled ">
+                            <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-geo-alt-fill mx-2"></i>
+                                <p>
+                                    5191 Eastside Hwy
+                                    Stevensville, MT 59870
+                                </p>
+                            </a>
+                        </li>
+                        <li class="list-unstyled ">
+                            <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-envelope-fill mx-2"></i>
+                                <p>info@glamping.global</p>
+                            </a>
+                        </li>
+                        <li class="list-unstyled d-flex flex-row2">
+                            <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-telephone-fill mx-2"></i>
+                                <p>Tel: 1-844-WEGLAMP</p>
+                            </a> 
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <div class="footer_b">
+        <div class="container">
+            <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center p-4">
+                <div class="container d-flex justify-content-between align-items-center">
+                    <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+                    <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer> 
     <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
     <script src="js/nav.js"></script>
 </body>
