--- a/shop.html
+++ b/shop.html
@@ -92,7 +92,7 @@
         <div class="hero_panel_color_dos position-absolute h-100 "></div>
         <div class="container d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Lead the pack! <br> Run Run!
+               Shop     
             </h1>
             <button class="hero_top_boton">
                 Get Started
@@ -120,9 +120,9 @@
         <section class="shop">
             <div class="d-flex flex-row my-3">
             </div>
-                <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg " class="about_us_titulo_img" alt="about_us_titulo_img">
-                    <h2 class="shop_titulo">Shoes</h2>
+                <div class="d-flex flex-row my-4">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="col-3 col-md-2 col-xl-1 pl-0" alt="seccion_titulo_img">
+                    <h2 class="secciones_titulo container">Shoes</h2>
                 </div>
                 <div class= "container-fluid d-flex flex-row flex-wrap justify-content-center align-items-center">
                     <div class="item my-2 mx-5">
@@ -211,10 +211,10 @@
                     </div>
                 </div>
             </div>
-            <div class="shop_short  py-5">
-                <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="about_us_titulo_img">
-                    <h2 class="shop_titulo">Short</h2>
+            <div class="shop_short py-3 my-4">
+                <div class="d-flex flex-row my-4">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="col-3 col-md-2 col-xl-1 pl-0" alt="seccion_titulo_img">
+                    <h2 class="secciones_titulo container">Short</h2>
                 </div>
                 <div class= "container-fluid d-flex flex-row flex-wrap justify-content-center align-items-center">
                     <div class="item my-2 mx-5">
@@ -316,9 +316,9 @@
                 </div>
             </div>
             <div class="shop_shirt my-3">
-                <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="about_us_titulo_img">
-                    <h2 class="shop_titulo">Shirt</h2>
+                <div class="d-flex flex-row my-4">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="col-3 col-md-2 col-xl-1 pl-0" alt="seccion_titulo_img">
+                    <h2 class="secciones_titulo container">Shirt</h2>
                 </div>
                 <div class= "container-fluid d-flex flex-row flex-wrap justify-content-center align-items-center">
                     <div class="item my-2 mx-5">
@@ -396,10 +396,10 @@
                 </div>
             </div>
         </section>
-        <section class="Subscribe_to_Newsletter Newsletter_shop container-fluid  d-flex flex-column justify-content-center align-items-center py-3">
+        <section class="Subscribe_to_Newsletter container-fluid d-flex flex-column justify-content-center align-items-center my-3  ">
             <h2>Subscribe to Newsletter</h2>
             <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
-                <input type="text" placeholder="" class="">
+                <input type="text" placeholder="" class="mx-1">
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <button class="mx-2 text-center ">Subscribe</button>
                 </div>
@@ -407,87 +407,96 @@
         </section>
     </main>
     
-    <footer class="container-fluid d-flex flex-column ">
-        <div class="row footer_info">
-            <div class=" col-4 my-3 d-flex flex-column justify-content-center align-items-center ">
-                <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
-                    <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
-                </a>
-                <ul class=" d-flex flex-row list-unstyled m-0">
-                    <li class="mx-2">
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-facebook"></i>
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-instagram"></i>
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-linkedin"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-4 my-3 ">
-                <h6>Quick Links</h6>
-                <ul>
-                    <li >
-                        <span class="punto"></span>
-                        <a aria-current="page" href="about.html">About us</a>
-                    </li>
-                    <li >
-                        <span class="punto "></span>
-                        <a  href="shop.html">Shop By</a>
-                    </li>
-                    <li class=>
-                        <span class="punto"></span>
-                        <a  href="preguntasF.html">Faq’s </a>
-                    </li>
-                    <li >
-                        <span class="punto"></span>
-                        <a  href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-4 my-3 ">
-                <h6>More Information</h6>
-                <ul>
-                    <li class="list-unstyled d-flex flex-row">
-                        <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-geo-alt-fill mx-2"></i>
-                            <p>
-                                5191 Eastside Hwy
-                                Stevensville, MT 59870
-                            </p>
-                        </a>
-                    </li>
-                    <li class="list-unstyled d-flex flex-row">
-                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-envelope-fill mx-2"></i>
-                            <p>info@glamping.global</p>
-                        </a>
-                    </li>
-                    <li class="list-unstyled d-flex flex-row2">
-                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-telephone-fill mx-2"></i>
-                            <p>Tel: 1-844-WEGLAMP</p>
-                        </a> 
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-            <div class="container d-flex justify-content-between align-items-center">
-                <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-                <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
-                    <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
-                </a>
+<!-- FOOTER -->
+<footer class="">
+    <div class=" footer_info">
+        <div class="container">
+            <div class="row">
+                <div class=" col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center ">
+                    <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
+                        <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                    </a>
+                    <ul class=" d-flex flex-row list-unstyled m-0">
+                        <li class="mx-2">
+                            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="mx-2">
+                            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="mx-2">
+                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center">
+                    <h6>Quick Links</h6>
+                    <ul>
+                        <li >
+                            <span class="punto"></span>
+                            <a aria-current="page" href="about.html">About us</a>
+                        </li>
+                        <li >
+                            <span class="punto "></span>
+                            <a  href="shop.html">Shop By</a>
+                        </li>
+                        <li class=>
+                            <span class="punto"></span>
+                            <a  href="preguntasF.html">Faq’s </a>
+                        </li>
+                        <li >
+                            <span class="punto"></span>
+                            <a  href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center">
+                    <h6>More Information</h6>
+                    <ul>
+                        <li class="list-unstyled ">
+                            <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-geo-alt-fill mx-2"></i>
+                                <p>
+                                    5191 Eastside Hwy
+                                    Stevensville, MT 59870
+                                </p>
+                            </a>
+                        </li>
+                        <li class="list-unstyled ">
+                            <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-envelope-fill mx-2"></i>
+                                <p>info@glamping.global</p>
+                            </a>
+                        </li>
+                        <li class="list-unstyled d-flex flex-row2">
+                            <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-telephone-fill mx-2"></i>
+                                <p>Tel: 1-844-WEGLAMP</p>
+                            </a> 
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <div class="footer_b">
+        <div class="container">
+            <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center p-4">
+                <div class="container d-flex justify-content-between align-items-center">
+                    <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+                    <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer> 
     <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
     <script src="owl/jquery.min.js"></script>
     <script src="owl/owl.carousel.min.js"></script>
