--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
         <div class="hero_panel_color_dos position-absolute h-100 "></div>
         <div class="container d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Lead the pack! <br> Run Run!
+                Contact
             </h1>
             <button class="hero_top_boton">
                 Get Started
@@ -115,8 +115,8 @@
         </ul>
     </section>
     <main>
-        <section class="contacto my-3">
-            <div class="d-flex flex-row justify-content-center align-items-center ">
+        <section class="contacto container my-4">
+            <div class="row ">
                 <form class="w-75 container">
                     <div class="form-group">
                       <input type="email" class="form-control border-0 w-100 shadow-sm p-3 rounded-lg my-4"  placeholder="Enter name">
@@ -128,11 +128,13 @@
                     <div class="form-group">
                         <textarea class=" border-0 w-100 shadow-sm p-3 rounded-lg my-4" name=""  placeholder="Message" wid></textarea>
                     </div>
-                    <button type="submit " class="btn ">Submit</button>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit " class="btn ">Submit</button>
+                    </div>
                 </form>
             </div>
         </section>
-        <section class="Subscribe_to_Newsletter Newsletter_conctact d-flex flex-column justify-content-center align-items-center  py-3">
+        <section class="Subscribe_to_Newsletter container-fluid d-flex flex-column justify-content-center align-items-center my-3  ">
             <h2>Subscribe to Newsletter</h2>
             <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
                 <input type="text" placeholder="" class="mx-1">
@@ -142,87 +144,96 @@
             </form>
         </section>
     </main>
-    <footer class="container-fluid d-flex flex-column ">
-        <div class="row footer_info">
-            <div class=" col-4 my-3 d-flex flex-column justify-content-center align-items-center ">
-                <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
-                    <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
-                </a>
-                <ul class=" d-flex flex-row list-unstyled m-0">
-                    <li class="mx-2">
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-facebook"></i>
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-instagram"></i>
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-linkedin"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-4 my-3 ">
-                <h6>Quick Links</h6>
-                <ul>
-                    <li >
-                        <span class="punto"></span>
-                        <a aria-current="page" href="about.html">About us</a>
-                    </li>
-                    <li >
-                        <span class="punto "></span>
-                        <a  href="shop.html">Shop By</a>
-                    </li>
-                    <li class=>
-                        <span class="punto"></span>
-                        <a  href="preguntasF.html">Faq’s </a>
-                    </li>
-                    <li >
-                        <span class="punto"></span>
-                        <a  href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-4 my-3 ">
-                <h6>More Information</h6>
-                <ul>
-                    <li class="list-unstyled d-flex flex-row">
-                        <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-geo-alt-fill mx-2"></i>
-                            <p>
-                                5191 Eastside Hwy
-                                Stevensville, MT 59870
-                            </p>
-                        </a>
-                    </li>
-                    <li class="list-unstyled d-flex flex-row">
-                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-envelope-fill mx-2"></i>
-                            <p>info@glamping.global</p>
-                        </a>
-                    </li>
-                    <li class="list-unstyled d-flex flex-row2">
-                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-telephone-fill mx-2"></i>
-                            <p>Tel: 1-844-WEGLAMP</p>
-                        </a> 
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-            <div class="container d-flex justify-content-between align-items-center">
-                <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-                <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
-                    <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
-                </a>
+<!-- FOOTER -->
+<footer class="">
+    <div class=" footer_info">
+        <div class="container">
+            <div class="row">
+                <div class=" col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center ">
+                    <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
+                        <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                    </a>
+                    <ul class=" d-flex flex-row list-unstyled m-0">
+                        <li class="mx-2">
+                            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="mx-2">
+                            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="mx-2">
+                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center">
+                    <h6>Quick Links</h6>
+                    <ul>
+                        <li >
+                            <span class="punto"></span>
+                            <a aria-current="page" href="about.html">About us</a>
+                        </li>
+                        <li >
+                            <span class="punto "></span>
+                            <a  href="shop.html">Shop By</a>
+                        </li>
+                        <li class=>
+                            <span class="punto"></span>
+                            <a  href="preguntasF.html">Faq’s </a>
+                        </li>
+                        <li >
+                            <span class="punto"></span>
+                            <a  href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 my-3 d-flex flex-column justify-content-center align-items-center">
+                    <h6>More Information</h6>
+                    <ul>
+                        <li class="list-unstyled ">
+                            <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-geo-alt-fill mx-2"></i>
+                                <p>
+                                    5191 Eastside Hwy
+                                    Stevensville, MT 59870
+                                </p>
+                            </a>
+                        </li>
+                        <li class="list-unstyled ">
+                            <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-envelope-fill mx-2"></i>
+                                <p>info@glamping.global</p>
+                            </a>
+                        </li>
+                        <li class="list-unstyled d-flex flex-row2">
+                            <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-telephone-fill mx-2"></i>
+                                <p>Tel: 1-844-WEGLAMP</p>
+                            </a> 
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <div class="footer_b">
+        <div class="container">
+            <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center p-4">
+                <div class="container d-flex justify-content-between align-items-center">
+                    <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+                    <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer> 
     <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
     <script src="js/nav.js"></script>
 </body>
