--- a/index.html
+++ b/index.html
@@ -311,7 +311,9 @@
                             <img src="PRUEBA/IMAGENES/CATEGORIA 1.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="shop_by_category_card_titulo mt-5">
-                            Shoes
+                            <p>
+                                Shoes
+                            </p>
                         </div>
                     </a>
                     <a href="shop.html" class="shop_by_category_card col-12 col-lg-4  d-flex flex-column align-items-center ">
@@ -320,7 +322,9 @@
                             <img src="PRUEBA/IMAGENES/CATEGORIA 2.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="shop_by_category_card_titulo mt-5">
-                            Sportswear
+                            <p>
+                                Sportswear
+                            </p>
                         </div>
                     </a>
                     <a href="shop.html" class="shop_by_category_card col-12 col-lg-4  d-flex flex-column align-items-center ">
@@ -329,7 +333,9 @@
                             <img src="PRUEBA/IMAGENES/CATEGORIA 3.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="shop_by_category_card_titulo mt-5">
-                            T-shirt
+                            <p>
+                                T-shirt
+                            </p>
                         </div>
                     </a>
                 </div>
@@ -418,7 +424,11 @@
         <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
             <input type="text" placeholder="" class="Newsletter_input mx-1 p-3">
             <div class="d-flex flex-row justify-content-center align-items-center">
-                <button class="mx-2 text-center ">Subscribe</button>
+                <button class="mx-2 text-center ">
+                    <p>
+                        Subscribe
+                    </p>
+                </button>
             </div>
         </form>
     </section>
