--- a/shop.html
+++ b/shop.html
@@ -133,7 +133,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -147,7 +147,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -161,7 +161,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -175,7 +175,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -189,7 +189,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -203,7 +203,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -217,7 +217,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Adidas shoes
                                 </p>
@@ -239,7 +239,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -253,7 +253,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -267,7 +267,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -281,7 +281,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -295,7 +295,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -309,7 +309,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -323,7 +323,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
@@ -337,7 +337,7 @@
                                 <i class="bi bi-cart "></i>
                             </div>
                             <h4>100$</h4>
-                            <div class="best_sellers_card-body ">
+                            <div class="best_sellers_card-body shop_card-body">
                                 <p>
                                     Sport short
                                 </p>
