--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@
                 <div class="container d-flex justify-content-between align-items-center">
                     <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
                     <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+                        <img src="PRUEBA/IMAGENES/SobreMi.JPG" alt="">
                     </a>
                 </div>
             </div>
